force-app/main/default/objects/ilms__User_Page__c/ilms__User_Page__c.object-meta.xml
<CustomObject>
    <label>User Page</label>
    <nameField>
        <displayFormat>UP{00000}</displayFormat>
        <label>User Page Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Pages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>