force-app/main/default/objects/ilms__User_Page__c/fields/ilms__Completed_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>ilms__Completed_Date_Time__c</fullName>
    <label>Completed Date Time</label>
    <type>DateTime</type>
</CustomField>