force-app/main/default/objects/ilms__User_Page__c/fields/ilms__Page__c.field-meta.xml
<CustomField>
    <fullName>ilms__Page__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Page</label>
    <referenceTo>ilms__Page__c</referenceTo>
    <relationshipLabel>User Pages</relationshipLabel>
    <relationshipName>Page</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>