force-app/main/default/objects/ilms__User_Page__c/fields/ilms__Page_Name__c.field-meta.xml
<CustomField>
    <fullName>ilms__Page_Name__c</fullName>
    <formula>ilms__Page__r.ilms__Page_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Page Name</label>
    <type>Text</type>
</CustomField>