force-app/main/default/objects/ilms__User_Page__c/fields/ilms__Page_Type__c.field-meta.xml
<CustomField>
    <fullName>ilms__Page_Type__c</fullName>
    <formula>ilms__Page__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Page Type</label>
    <type>Text</type>
</CustomField>