force-app/main/default/objects/ilms__User_Page__c/fields/ilms__Percentage__c.field-meta.xml
<CustomField>
    <fullName>ilms__Percentage__c</fullName>
    <label>Percentage</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>