force-app/main/default/objects/ilms__User_Page__c/fields/ilms__Quiz_NTimes__c.field-meta.xml
<CustomField>
    <fullName>ilms__Quiz_NTimes__c</fullName>
    <label>Quiz Taken Times</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>