force-app/main/default/objects/ilms__User_Page__c/fields/ilms__User_Chapter__c.field-meta.xml
<CustomField>
    <fullName>ilms__User_Chapter__c</fullName>
    <label>User Chapter</label>
    <referenceTo>ilms__User_Chapter__c</referenceTo>
    <relationshipLabel>User Pages</relationshipLabel>
    <relationshipName>User_Pages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>